--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,14 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
 loader_version=0.16.10
 
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.20.4-1.1.1
 maven_group=net.iamaprogrammer
 archives_base_name=wax-item-frames
 
 # Dependencies
-fabric_version=0.118.5+1.21.4
+fabric_version=0.97.2+1.20.4
