--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.6+build.3
 loader_version=0.16.10
 
 # Mod Properties
-mod_version=1.20.X-1.0.1
+mod_version=1.20.6-1.1.1
 maven_group=net.iamaprogrammer
 archives_base_name=wax-item-frames
 
